fix: 敏感字段加密、CORS限制、移除幽灵路径、密码复杂度校验
Fix 2: BizSupplier(contactPhone/bankAccount/taxNo)和BizHrEntry(phone/idCardNo)
       添加AES-256加密TypeHandler注解，autoResultMap=true确保查询自动解密
Fix 3: CORS allowedOriginPatterns从通配符*改为可配置的cors-origins，
       默认仅允许localhost:5173/80和服务器IP
Fix 4: 移除前后端SIGNED_PATHS中无对应Controller的幽灵路径/api/v1/payment/apply
Fix 5: 登录忘记密码和个人中心修改密码均添加密码复杂度校验：
       大小写字母+数字+特殊字符，至少8位